--- a/src/Presentation/ECommerceApp.Presentation/Areas/Admin/Views/Manager/AddManager.cshtml
+++ b/src/Presentation/ECommerceApp.Presentation/Areas/Admin/Views/Manager/AddManager.cshtml
@@ -34,7 +34,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="BirthDate" class="control-label"></label>
-                <input asp-for="BirthDate" class="form-control" />
+                <input type="datetime-local" asp-for="BirthDate" class="form-control" />
                 <span asp-validation-for="BirthDate" class="text-danger"></span>
             </div>
  
