--- a/src/Presentation/ECommerceApp.Presentation/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/src/Presentation/ECommerceApp.Presentation/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/ECommerceApp.Presentation.styles.css" asp-append-version="true" />
 </head>
-<body class="img js-fullheight" style="background-image: url(/img/AdminPanel1.jpg);">
+<body class="img js-fullheight" style="background-color:cornsilk; " >
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
