--- a/src/Presentation/ECommerceApp.Presentation/Areas/Admin/Views/Manager/ListOfManagers.cshtml
+++ b/src/Presentation/ECommerceApp.Presentation/Areas/Admin/Views/Manager/ListOfManagers.cshtml
@@ -6,6 +6,9 @@
 }
 
 <h1 class="text-center text-uppercase" >List Of Managers</h1>
+<hr />
+<h1 class="text-center text-uppercase">@ViewBag.EmptyList</h1>
+
 
 <table class="table">
     <thead>
